--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ mybatis-flex.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 springdoc.swagger-ui.path=/doc.html
 #
 # \u914D\u7F6E\u9ED8\u8BA4\u65E5\u5FD7\u6587\u4EF6\u8DEF\u5F84
-logging.file.name=db.log
+logging.file.name=log/db.log
+# \u65E5\u5FD7\u683C\u5F0F
+logging.pattern.console=%d{yyyy-MM-dd-HH:mm:ss} %-5level [%thread] [%logger{50}] -%msg%n
